<resources>
    <string name="app_name">Autobot</string>

    <string name="solgan">Autobot\n always by your side</string>
    <string name="please_input_phone_number">Please input phone number</string>
    <string name="log_in">Log in</string>
    <string name="no_account">No account?</string>
    <string name="logo">logo</string>
    <string-array name="AccountType">
        <item>Phone Number</item>
        <item>User Name</item>
    </string-array>
    <string-array name="Money_amount">
        <item>10</item>
        <item>20</item>
        <item>50</item>
        <item>100</item>
    </string-array>

    <string-array name="Models">
        <item>Normal</item>
        <item>Pleasure</item>
        <item>Luxury</item>
    </string-array>
    <string-array name="Tips">
        <item>no tip</item>
        <item>10%</item>
        <item>15%</item>
        <item>20%</item>
    </string-array>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="Continue">Continue</string>
    <string name="phonenumber">Phone Number*</string>
    <string name="user_name">User Name*</string>
    <string name="driver">Driver</string>
    <string name="rider">Rider</string>
    <string name="agree_policy_terms">I agree to the following: Privacy Policy, Terms Of Service, Autobot Terms And Conditions.</string>
    <string name="Destination">Destination</string>
    <string name="address">Address</string>
    <string name="Estimated_fare">Fare:</string>
    <string name="fare">0.0</string>
    <string name="add_tips">Add tips</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="home_address">Home Address</string>
    <string name="set_password">Set Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="edit">Edit</string>
    <!--Drawer default -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Estimated_Money">Estimated Money</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="where_to_go">Where to go?</string>
    <string name="where_are_you">Where are you?</string>
    <string name="api_key">AIzaSyAk4LrG7apqGcX52ROWvhSMWqvFMBC9WAA</string>
    <string name="textview">TextView</string>
    <string name="license">Copyright (c) 2019 CMPUT301W20T05</string>
</resources>

