<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/default_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accountUserName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:textColor="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="114dp" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textColor="@color/blue" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:inputType="textPersonName"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textColor="@color/blue" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:inputType="textPersonName"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/blue" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/blue" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:inputType="textEmailAddress"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/home_address"
        android:textColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/blue"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/emergency_contact"
        android:textColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/blue"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>