<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:background="@android:color/background_light"
    android:clickable="true">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileAvatar"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/default_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileAvatar">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/FirstName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/LastName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/PhoneNumber"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/EmailAddress"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:singleLine="true"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>